--- a/src/index.css
+++ b/src/index.css
@@ -3,15 +3,19 @@ body {
     font-size: 16px;
 }
 
-h1, h2, h3, h4, h5 {
+h1,
+h2,
+h3,
+h4,
+h5 {
     font-family: Roboto, Arial Unicode MS, Arial, sans-serif;
     font-weight: 500;
     letter-spacing: 0;
-    color: #2A2A2A;
+    color: #2a2a2a;
     padding: 0;
     margin: 0;
 }
 
-[role=dialog] > div > div:first-child {
+[role='dialog'] > div > div:first-child {
     background-color: transparent;
 }
